Now able to display SVG images.